Вносит изменения в файлы index.html и hotels.html в соответствии с комментариями

--- a/hotels.html
+++ b/hotels.html
@@ -7,30 +7,31 @@
   <body>
 
     <!-- Шапка сайта -->
-    <header class="page-header">
-        <a href="index.html" class="page-header__logo">
+    <header class="header">
+        <a href="index.html" class="header__logo">
             <img src="logo.jpg" alt="Лого сайта Седона">
         </a>      
-        <nav class="page-header__nav page-nav">
-          <ul class="page-nav__list">
-            <li class="page-nav__item">
-              <a class="page-nav__link" href="info.html">Информация</a>
+        <div class="header__top-icon"></div>      
+        <nav class="header__navigaion navigation-header">
+          <ul class="navigation-header__list">
+            <li class="navigation-header__item">
+              <a class="navigation-header__link" href="info.html">Информация</a>
             </li>
-            <li class="page-nav__item">
-                <a class="page-nav__link" href="media.html">Фото и видео</a>
+            <li class="navigation-header__item">
+                <a class="navigation-header__link" href="media.html">Фото и видео</a>
             </li>
-            <li class="page-nav__item">
-                <a class="page-nav__link" href="maps.html">Карта штата</a>
+            <li class="navigation-header__item">
+                <a class="navigation-header__link" href="maps.html">Карта штата</a>
             </li>
-            <li class="page-nav__item">
-                <a class="page-nav__link" href="hotels.html">Гостиницы</a>
+            <li class="navigation-header__item">
+                <a class="navigation-header__link" href="hotels.html">Гостиницы</a>
             </li>
           </ul>
         </nav>
       </header>
 
       <!-- Главное содержимое страницы -->
-      <main class="page-main">
+      <main class="main">
         <h1 class="visually-hidden">Поиск гостиницы</h1>
 
         <!-- Раздел с формой поиска отеля -->
@@ -42,24 +43,28 @@
         </section>
         
         <!-- Раздел сортировки результатов поиска-->
-        <section class="sorting">
-          <h2 class="visually-hidden">Сортировка</h2>
-          <p class="sorting__title">Найдено: 3</p>
-          <p class="sorting__text">Сортировать</p>
+        <section class="sorting">          
+          <p class="sorting__text">Найдено: 3</p>
+          <h2 class="sorting__title">Сортировка</h2>
           <ul class="sorting__list">
             <li class="sorting__item">
-              <a class="sorting__item_link sorting__item_current" href="#">По цене</a>
+              <a class="sorting__link sorting__link--current" href="#">По цене</a>
             </li>
             <li class="sorting__item">
-              <a class="sorting__item_link" href="#">По типу</a>
+              <a class="sorting__link" href="#">По типу</a>
             </li>
             <li class="sorting__item">
-              <a class="sorting__item_link" href="#">По рейтингу</a>
+              <a class="sorting__link" href="#">По рейтингу</a>
             </li>
-            <li class="sorting__item-dir">
-              <a class="sorting__dir-link sorting__dir-link-up" href="#">По возрастанию</a>
-              <a class="sorting__dir-link sorting__dir-link-down dir-link-current" href="#">По убыванию</a>
-            </li>            
+                     
+          </ul>          
+          <ul class="sorting-direction__list">
+            <li class="sorting-direction__item">
+              <a class="sorting-direction__link sorting-direction__link--up" href="#">По возрастанию</a>
+            </li>
+            <li class="sorting-direction__item">
+              <a class="sorting-direction__link sorting-direction__link--down sorting-direction__link--current" href="#">По убыванию</a>
+            </li>
           </ul>
         </section>
 
@@ -69,7 +74,9 @@
           <ul class="catalog__list">
             <li class="catalog__item">
               <img class="catalog__image" src="" alt="Amara Resort & Spa">
-              <p class="catalog__title">Amara Resort & Spa</p>
+              <h3 class="catalog__title">
+                <a href="#" class="catalog__link">Amara Resort & Spa</a>
+              </h3>
               <p class="catalog__type-hotel">Гостиница</p>
               <p class="catalog__cost">От 4000 Р.</p>
               <a class="catalog__more-details" href="#">Подробнее</a>
@@ -83,7 +90,9 @@
             </li>
             <li class="catalog__item">
                 <img class="catalog__image" src="" alt="Desert Quail Inn">
-                <p class="catalog__title">Desert Quail Inn</p>
+                <h3 class="catalog__title">
+                  <a href="#" class="catalog__link">Desert Quail Inn</a>
+                </h3>
                 <p class="catalog__type-hotel">Мотель</p>
                 <p class="catalog__cost">От 3000 Р.</p>
                 <a class="catalog__more-details" href="#">Подробнее</a>
@@ -97,7 +106,9 @@
             </li>
             <li class="catalog__item">
                 <img class="catalog__image" src="" alt="Villas at Poco Diablo">
-                <p class="catalog__title">Villas at Poco Diablo</p>
+                <h3 class="catalog__title">
+                  <a href="#" class="catalog__link">Villas at Poco Diablo</a>
+                </h3>
                 <p class="catalog__type-hotel">Апартаменты</p>
                 <p class="catalog__cost">От 2000 Р.</p>
                 <a class="catalog__more-details" href="#">Подробнее</a>
@@ -114,25 +125,27 @@
       </main>
 
       <!-- Подвал сайта -->
-    <footer class="page-footer">
-        <span class="page-footer__hashtag">#visitsedona</span>
-        <ul class="page-footer__socials-list">
-          <li class="page-footer__socials-item">
-            <a href="#" class="page-footer__socials-link page-footer__socials-link-twitter">Наша группа в Twitter</a>
+      <footer class="footer">
+        <span class="footer__hashtag">#visitsedona</span>
+        <ul class="footer__socials-list">
+          <li class="footer__socials-item">
+            <a href="#" class="footer__socials-link footer__socials-link--twitter">Наша группа в Twitter</a>
           </li>
-          <li class="page-footer__socials-item">
-              <a href="#" class="page-footer__socials-link page-footer__socials-link-facebook">Наша группа в Facebook</a>
+          <li class="footer__socials-item">
+              <a href="#" class="footer__socials-link footer__socials-link--facebook">Наша группа в Facebook</a>
           </li>
-          <li class="page-footer__socials-item">
-              <a href="#" class="page-footer__socials-link page-footer__socials-link-youtube">Наша группа в Youtube</a>
+          <li class="footer__socials-item">
+              <a href="#" class="footer__socials-link footer__socials-link--youtube">Наша группа в Youtube</a>
           </li>
         </ul>
-        <p class="page-footer__developer-name">Website by</p>
-        <span class="page-footer__logo">
-          <a class="page-footer__developer-link" href="https://htmlacademy.ru/" >
-            <img class="page-footer__developer-image" src="#" alt="htmlacademy.ru">
+        <p class="footer__developer-name">Website by</p>
+        <span class="footer__logo">
+          <a class="footer__developer-link" href="https://htmlacademy.ru/" >
+            <img class="footer__developer-image" src="#" alt="htmlacademy.ru">
           </a>
         </span>
       </footer>
   </body>
-</html>    
+</html>
+
+
