--- a/hotels.html
+++ b/hotels.html
@@ -9,7 +9,7 @@
     <!-- Шапка сайта -->
     <header class="header">
         <a href="index.html" class="header__logo">
-            <img src="logo.jpg" alt="Лого сайта Седона">
+            <img  src="img/logo-sedona.svg" width="140" height="70" alt="Лого сайта Седона">
         </a>
         <nav class="header__navigaion navigation-header">
           <ul class="navigation-header__list">
@@ -23,7 +23,7 @@
                 <a class="navigation-header__link" href="maps.html">Карта штата</a>
             </li>
             <li class="navigation-header__item">
-                <a class="navigation-header__link" href="hotels.html">Гостиницы</a>
+                <a class="navigation-header__link" href="#">Гостиницы</a>
             </li>
           </ul>
         </nav>
@@ -72,7 +72,7 @@
           <h2 class="visually-hidden">Каталог</h2>
           <ul class="catalog__list">
             <li class="catalog__item">
-              <img class="catalog__image" src="" alt="Amara Resort & Spa">
+              <img class="catalog__image" src="img/hotel_1.jpg" width="135" height="90" alt="Amara Resort & Spa">
               <h3 class="catalog__title">
                 <a href="#" class="catalog__title-link">Amara Resort & Spa</a>
               </h3>
@@ -86,7 +86,7 @@
               </div>
             </li>
             <li class="catalog__item">
-                <img class="catalog__image" src="" alt="Desert Quail Inn">
+                <img class="catalog__image" src="img/hotel_2.jpg" width="135" height="90" alt="Desert Quail Inn">
                 <h3 class="catalog__title">
                   <a href="#" class="catalog__title-link">Desert Quail Inn</a>
                 </h3>
@@ -100,7 +100,7 @@
                 </div>
             </li>
             <li class="catalog__item">
-                <img class="catalog__image" src="" alt="Villas at Poco Diablo">
+                <img class="catalog__image" src="img/hotel_3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
                 <h3 class="catalog__title">
                   <a href="#" class="catalog__title-link">Villas at Poco Diablo</a>
                 </h3>
@@ -134,7 +134,7 @@
         <p class="footer__developer-name">Website by</p>
         <span class="footer__logo">
           <a class="footer__developer-link" href="https://htmlacademy.ru/intensive/htmlcss" >
-            <img class="footer__developer-image" src="#" alt="htmlacademy.ru">
+            <img class="footer__developer-image" src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy.ru">
           </a>
         </span>
       </footer>
