--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Шапка сайта -->
     <header class="header">
-      <img class="header__logo" src="logo.jpg" alt="Лого сайта Седона">
+      <img class="header__logo" src="img/logo-sedona.svg" width="140" height="70" alt="Лого сайта Седона">
       <nav class="header__navigaion navigation-header">
         <ul class="navigation-header__list">
           <li class="navigation-header__item">
@@ -43,7 +43,7 @@
             <h3 class="features-item__title">Настоящий городок</h3>
             <p class="features-item__item-number">№1</p>
             <p class="features-item__description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <ul class="city-attractions__list">
+            <ul class="city-attractions">
                 <li class="city-attractions__item">
                   <h4 class="city-attractions__title">Жильё</h4>
                   <p class="city-attractions__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -89,7 +89,7 @@
           Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в седоне
         </p>
-        <input type="button" value="Поиск гостиницы в Седоне">
+        <button type="button">Поиск гостиницы в Седоне</button>
         <form class="hotel-search__popup-form"></form>
       </section>
 
@@ -120,7 +120,7 @@
       <p class="footer__developer-name">Website by</p>
       <span class="footer__logo">
         <a class="footer__developer-link" href="https://htmlacademy.ru/intensive/htmlcss" >
-          <img class="footer__developer-image" src="#" alt="htmlacademy.ru">
+          <img class="footer__developer-image" src="img/logo-htmlacademy.svg" width="115" height="41" alt="htmlacademy.ru">
         </a>
       </span>
     </footer>
