Создает map.jpg и добавляет ссылку в разметку

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section class="map">
         <h2 class="map__title visually-hidden">Карта</h2>
         <a href="#" class="map__link">
-          <img class="map__image" src="#" alt="Карта">
+          <img class="map__image" src="img/map.jpg" width="1200" height="593" alt="Карта">
         </a>
       </section>
 
