Добавляет в форму кнопки за место спанов

--- a/index.html
+++ b/index.html
@@ -94,24 +94,24 @@
           <label class="hotel-search__field">
             <span class="hotel-search__field-name">Дата заезда</span>
             <input class="hotel-search__input" type="text" name="arrival-date" value="" placeholder="24 апреля 2017">
-            <span class="hotel-search__icon-date"></span>
+            <button class="hotel-search__icon-date" type="button">Выбор даты заезда</button>
           </label>
           <label class="hotel-search__field">
             <span class="hotel-search__field-name">Дата выезда</span>
             <input class="hotel-search__input" type="text" name="departure-date" value="" placeholder="4 июля 2017">
-            <span class="hotel-search__icon-date"></span>
+            <button class="hotel-search__icon-date" type="button">Выбор даты выезда</button>
           </label>
           <label class="hotel-search__field">
             <span class="hotel-search__field-name">Взрослые</span>
-            <span class="hotel-search__icon-plus"></span>
+            <button class="hotel-search__icon-plus" type="button">Увеличение количества взрослых</button>
             <input class="hotel-search__input" type="text" name="adults" value="" placeholder="2">
-            <span class="hotel-search__icon-minus"></span>
+            <button class="hotel-search__icon-minus" type="button">Уменьшение количества взрослых</button>
           </label>
           <label class="hotel-search__field">
-              <span class="hotel-search__field-name">Дети</span>
-              <span class="hotel-search__icon-plus"></span>
-              <input class="hotel-search__input" type="text" name="children" value="" placeholder="0">
-              <span class="hotel-search__icon-minus"></span>
+            <span class="hotel-search__field-name">Дети</span>
+            <button class="hotel-search__icon-plus" type="button">Увеличение количества детей</button>
+            <input class="hotel-search__input" type="text" name="children" value="" placeholder="0">
+            <button class="hotel-search__icon-minus" type="button">Уменьшение количества детей</button>
           </label>
           <button class="hotel-search__button-search" type="submit">Найти</button>
         </form>
