Добавляет фон для внутренней формы

--- a/hotels.html
+++ b/hotels.html
@@ -36,6 +36,7 @@
         <!-- Раздел с формой поиска отеля -->
         <section class="hotel-search-inner">
           <h2 class="visually-hidden">Форма поиска гостиницы</h2>
+            <div class="hotel-search-inner__background"></div>
             <form  class="form-inner">
               <!-- Группа чекбоксов Инфраструктура -->
               <fieldset class="form-inner__form-group">
