Добавляет стилизацию для hotels.html

--- a/hotels.html
+++ b/hotels.html
@@ -26,7 +26,7 @@
                 <a class="navigation-header__link" href="maps.html">Карта штата</a>
             </li>
             <li class="navigation-header__item">
-                <a class="navigation-header__link" href="#">Гостиницы</a>
+                <a class="navigation-header__link navigation-header__link--current" href="#">Гостиницы</a>
             </li>
           </ul>
         </nav>
@@ -145,8 +145,8 @@
               </h3>
               <p class="catalog__type-hotel">Гостиница</p>
               <p class="catalog__cost">От 4000 Р.</p>
-              <a class="catalog__more-details" href="#">Подробнее</a>
-              <a class="catalog__booking" href="#">Забронировать</a>
+              <a class="catalog__button catalog__button--more-details" href="#">Подробнее</a>
+              <a class="catalog__button catalog__button--booking" href="#">Забронировать</a>
               <div class="catalog__raiting">
                 <span class="catalog__raiting-stars">Четыре звезды</span>
                 <p class="catalog__raiting-numbers">Рейтинг: 8,5</p>
@@ -159,8 +159,8 @@
                 </h3>
                 <p class="catalog__type-hotel">Мотель</p>
                 <p class="catalog__cost">От 3000 Р.</p>
-                <a class="catalog__more-details" href="#">Подробнее</a>
-                <a class="catalog__booking" href="#">Забронировать</a>
+                <a class="catalog__button catalog__button--more-details" href="#">Подробнее</a>
+                <a class="catalog__button catalog__button--booking" href="#">Забронировать</a>
                 <div class="catalog__raiting">
                   <span class="catalog__raiting-stars">Три звезды</span>
                   <p class="catalog__raiting-numbers">Рейтинг: 8,9</p>
@@ -173,8 +173,8 @@
                 </h3>
                 <p class="catalog__type-hotel">Апартаменты</p>
                 <p class="catalog__cost">От 2000 Р.</p>
-                <a class="catalog__more-details" href="#">Подробнее</a>
-                <a class="catalog__booking" href="#">Забронировать</a>
+                <a class="catalog__button catalog__button--more-details" href="#">Подробнее</a>
+                <a class="catalog__button catalog__button--booking" href="#">Забронировать</a>
                 <div class="catalog__raiting">
                   <span class="catalog__raiting-stars">Две звезды</span>
                   <p class="catalog__raiting-numbers">Рейтинг: 9,2</p>
