Меняет стилизацию блоков преимуществ

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <p class="features__title">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="features__list">
           <li class="features__item features-item item-image">
-            <h3 class="features-item__title">Настоящий городок</h3>
-            <p class="features-item__item-number">№1</p>
-            <p class="features-item__description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <h3 class="features-item__title features-item__title--text-white">Настоящий городок</h3>
+            <p class="features-item__item-number features-item__item-number--text-white">№1</p>
+            <p class="features-item__description features-item__description--text-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <ul class="city-attractions">
                 <li class="city-attractions__item">
                   <h4 class="city-attractions__title">Жильё</h4>
@@ -62,9 +62,9 @@
             </ul>
           </li>
           <li class="features__item features-item item-image">
-              <h3 class="features-item__title">Там есть Мост дьявола</h3>
-              <p class="features-item__item-number">№2</p>
-              <p class="features-item__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+              <h3 class="features-item__title features-item__title--text-white">Там есть Мост дьявола</h3>
+              <p class="features-item__item-number features-item__item-number--text-white">№2</p>
+              <p class="features-item__description features-item__description--text-white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
           <li class="features__item">
               <h3 class="features-item__title">Небольшая площадь</h3>
