Исправляет мелкие ошибки в стилях и разметке

--- a/hotels.html
+++ b/hotels.html
@@ -111,7 +111,7 @@
         <!-- Раздел сортировки результатов поиска-->
         <section class="sorting">
           <p class="sorting__text">Найдено: 3</p>
-          <h2 class="sorting__title">Сортировка</h2>
+          <h2 class="sorting__title">Сортировка:</h2>
           <ul class="sorting__list">
             <li class="sorting__item">
               <a class="sorting__link sorting__link--current" href="#">По цене</a>
