Исправляет ошибки в названиях классов в index.html

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
               <p class="features-item__item-number features-item__item-number--text-white">№2</p>
               <p class="features-item__description features-item__description--text-white">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features-item">
               <h3 class="features-item__title">Небольшая площадь</h3>
               <p class="features-item__item-number">№3</p>
               <p class="features-item__description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features-item">
               <h3 class="features-item__title">Красивая дорога</h3>
               <p class="features-item__item-number">№4</p>
               <p class="features-item__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features-item">
               <h3 class="features-item__title">Мало туристов</h3>
               <p class="features-item__item-number">№5</p>
               <p class="features-item__description">Большинство едет в гранд каньон и толпится там</p>
