Исправляет отображение попапа
В выключеном состоянии попапа его маска мешала двигать карту

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="hotel-search__wrapper-form">
           <button class="hotel-search__button hotel-search__button-popup" type="button">Поиск гостиницы в Седоне</button>
-          <div class="wrapper-mask">
+          <div class="hotel-search__wrapper-mask">
             <form class="hotel-search__popup-form hotel-search__popup-form--show" action="https://echo.htmlacademy.ru" method="post">
               <div class="hotel-search__wrapper-field">
                 <label class="hotel-search__field" for="arrival-date-field">
