Исправляет последние недочеты и создает минифицированные файлы

--- a/hotels.html
+++ b/hotels.html
@@ -60,7 +60,7 @@
               </li>
               <li class="form-inner__item">
                 <input class="form-inner__input form-inner__input--checkbox visually-hidden" type="checkbox"
-                  name="infrastructure" value="wifi" id="infrastructure-wifi">
+                  name="infrastructure" value="wifi" id="infrastructure-wifi" disabled>
                 <label class="form-inner__label" for="infrastructure-wifi">wi-fi</label>
               </li>
             </ul>
@@ -84,7 +84,7 @@
               </li>
               <li class="form-inner__item">
                 <input class="form-inner__input form-inner__input--checkbox visually-hidden" type="checkbox"
-                  name="type-housing" value="apartments" id="type-apartments" checked>
+                  name="type-housing" value="apartments" id="type-apartments" checked disabled>
                 <label class="form-inner__label" for="type-apartments">Апартаменты</label>
               </li>
             </ul>
